--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </label>
                     <label class="label">
                         Размер шрифта:
-                        <input type="number" class="settings__input">
+                        <input type="number" class="settings__input" value="18" min="9" max="65">
                     </label>
                     <label class="label">
                         Цвет:
@@ -140,12 +140,22 @@
                         Интервал:
                         <input type="range" class="settings__input" min="0" max="100" step="5">
                     </label>
-                    <label class="label">
-                        Цвет:
-                        <input type="radio" class="settings__background-color-label" name="alt" id="">
-                        <input type="radio" class="settings__background-color-label" name="alt" id="">
-                        <input type="radio" class="settings__background-color-label" name="alt" id="">
-                    </label>
+                    <div class="label">
+                        Цвет фона:
+                        <label class="settings__background-color-label white">
+                            <input type="radio" name="alt">
+                        </label>
+                        <label class="settings__background-color-label bisque">
+                            <input type="radio" name="alt" checked>
+                        </label>
+                        <label class="settings__background-color-label grey">
+                            <input type="radio" name="alt">
+                        </label>
+                        <label class="settings__background-color-label black">
+                            <input type="radio" name="alt">
+                        </label>
+                    </div>    
+                       
                 </form>
 
             </div>
