--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                         Шрифт:
                         <select class="settings__input">
                             <option value="stratosSkyeng"select>StratosSkyeng</option>
-                            <option value="timesNewRoman">Times New Roman</option>
-                            <option value="calibri">Calibri</option>
+                            <option value="roboto" selected>Roboto</option>
+                            <option value="openSans">Open Sans</option>
                         </select>
                     </label>
                     <label class="label">
